--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="main-container">
   <nav>
     <a id="main-logo" [routerLink]=" ['./'] " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-        LolTheory
+        Statikk
       </a>
     <a class="nav-link" [routerLink]=" ['./champions'] " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         Champions
