--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,14 +1,25 @@
-<div id="main-container">
-  <nav>
-    <a id="main-logo" [routerLink]=" ['./'] " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse accent-bg">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  <div class="container">
+    <a id="main-logo" class="navbar-brand mr-auto" routerLink="/" routerLinkActive="active">
         Statikk
       </a>
-    <a class="nav-link" [routerLink]=" ['./champions'] " routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-        Champions
-      </a>
-  </nav>
 
-  <main>
-    <router-outlet></router-outlet>
-  </main>
-</div>
+    <div class="my-2 my-lg-0">
+      <!-- <div class="collapse navbar-collapse " id="navbarNavAltMarkup"> -->
+      <div class="navbar-nav ">
+        <a class="nav-item nav-link" routerLink="/champions" routerLinkActive="active">
+            Champions
+          </a>
+      </div>
+      <!-- </div> -->
+    </div>
+  </div>
+</nav>
+
+<main id="main-content-container" class="container">
+  <router-outlet></router-outlet>
+</main>
