--- a/web-app/src/app/features/champions/champion-detail/champion-detail.component.html
+++ b/web-app/src/app/features/champions/champion-detail/champion-detail.component.html
@@ -1,5 +1,58 @@
-<div class="fade-in-slow" *ngIf="champion.key" id="champion-detail-container-wrapper" [style.background]="'url(http://ddragon.leagueoflegends.com/cdn/img/champion/splash/' + champion.key + '_0.jpg)'">
-  <div id="champion-detail-container">
-    <h2>{{champion.name}} {{champion.title}}</h2>
+<div id="champion-content" *ngIf="champion.key">
+  <div id="champion-header-container" class="row align-items-center justify-content-around">
+    <div class="col">
+      <h1>{{champion.name}}</h1>
+      <h2 id="champion-subtitle" class="hidden-md-down">{{champion.title}}</h2>
+    </div>
+    <div class="col centered">
+      <img [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/champion/' + champion.image.full" />
+    </div>
+  </div>
+  <div class="row justify-content-around" id="champion-info-wrapper">
+    <div class="col-2 info-bar-wrapper" ngbTooltip="Attack: {{champion.info.attack}}/10">
+      <div class="progress-bar champ-info-attack" [style.width]="(champion.info.attack * 10) + '%'">
+      </div>
+    </div>
+    <div class="col-2 info-bar-wrapper" ngbTooltip="Defense: {{champion.info.defense}}/10">
+      <div class="progress-bar champ-info-defense" [style.width]="(champion.info.defense * 10) + '%'">
+      </div>
+    </div>
+    <div class="col-2 info-bar-wrapper" ngbTooltip="Magic: {{champion.info.magic}}/10">
+      <div class="progress-bar champ-info-magic" [style.width]="(champion.info.magic * 10) + '%'">
+      </div>
+    </div>
+    <div class="col-2 info-bar-wrapper" ngbTooltip="Difficulty: {{champion.info.difficulty}}/10">
+      <div class="progress-bar champ-info-difficulty" [style.width]="(champion.info.difficulty * 10) + '%'">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <ngb-tabset>
+      <ngb-tab>
+        <ng-template ngbTabTitle>
+          <img class="inline-riot-md" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/passive/' + champion.passive.image.full"
+          /> Passive
+        </ng-template>
+        <ng-template ngbTabContent class="tab-content">
+          <h3> <img class="inline-riot-lg" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/passive/' + champion.passive.image.full"
+            /> {{champion.passive.name}}
+          </h3>
+
+          <p>{{champion.passive.sanitizedDescription}}</p>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab *ngFor="let spell of champion.spells; let i = index">
+        <ng-template ngbTabTitle>
+          <img class="inline-riot-md" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/spell/' + spell.image.full" />          {{getSpellLetterFromIndex(i)}}
+        </ng-template>
+        <ng-template ngbTabContent class="tab-content">
+          <h3> <img class="inline-riot-lg" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/spell/' + spell.image.full"
+            /> {{spell.name}}
+          </h3>
+
+          <p>{{spell.sanitizedDescription}}</p>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
   </div>
 </div>
