--- a/web-app/src/app/features/home/home.component.scss
+++ b/web-app/src/app/features/home/home.component.scss
@@ -7,13 +7,20 @@
   margin-top: 200px;
 }
 
+#main-search-form {
+  max-width: 660px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 input#main-search {
+  color: #CCC;
   text-align: center;
   border: none;
-  background-color: #EEE;
-  font-size: 35pt;
-  width: 80%;
-  color: #4891ff;
+}
+
+.statikk-input-group-btn {
+  border-left: 2px solid #777;
 }
 
 input#main-search:focus {
@@ -22,24 +29,24 @@ input#main-search:focus {
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: #4891ff;
+  color: #EEE;
   opacity: 0.6;
 }
 
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #4891ff;
+  color: #EEE;
   opacity: 0.6;
 }
 
 :-ms-input-placeholder {
   /* IE 10+ */
-  color: #4891ff;
+  color: #EEE;
   opacity: 0.6;
 }
 
 :-moz-placeholder {
   /* Firefox 18- */
-  color: #4891ff;
+  color: #EEE;
   opacity: 0.6;
 }
