Refactoring to improve champWinRates endpoint, adding filters

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,19 +1,15 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse accent-bg">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<nav class="navbar navbar-inverse bg-inverse accent-bg">
   <div class="container">
     <a id="main-logo" class="navbar-brand mr-auto" routerLink="/" routerLinkActive="active">
-        Statikk
-      </a>
+      Statikk
+    </a>
 
     <div class="my-2 my-lg-0">
       <!-- <div class="collapse navbar-collapse " id="navbarNavAltMarkup"> -->
       <div class="navbar-nav ">
         <a class="nav-item nav-link" routerLink="/champions" routerLinkActive="active">
-            Champions
-          </a>
+          Champions
+        </a>
       </div>
       <!-- </div> -->
     </div>
