--- a/web-app/src/app/features/champions/champions.component.scss
+++ b/web-app/src/app/features/champions/champions.component.scss
@@ -4,14 +4,11 @@
   margin-right: 3px;
 }
 
-.champion-row {
-  cursor: pointer;
-}
-
-.champion-row:hover {
-  background-image: url("/assets/img/bg/light-gray-stripes.png");
-}
-
 td {
   vertical-align: middle;
+}
+
+#champions-table {
+  max-width: 600px;
+  margin: 0 auto;
 }
