Adding match type filer to champion win rate endpoint

--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -27,8 +27,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="champion-row" *ngFor="let champion of championWinRates | myChampionSort: sortColumn:reversed:staticChampions"
-      (click)="navigateToChampion(champion.championId)">
+    <tr class="champion-row" *ngFor="let champion of championWinRates | myChampionSort: sortColumn:reversed:staticChampions">
       <td>
         <a [routerLink]="champion.championId">
           <img class="champion-tile-img" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/champion/' + staticChampions[champion.championId].image.full"
