--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -1,15 +1,19 @@
 <div class="main-heading-wrapper">
   <h1>Champions</h1>
 </div>
-{{filterCriteraFormGroup.value | json}}
 <form [formGroup]="filterCriteraFormGroup" novalidate>
   <select class="form-control" formControlName="matchType" (change)="loadChampionWinRates()">
-    <option [value]="420">Ranked 5's</option>
+    <option [value]="420">Ranked Solo 5's</option>
+    <option [value]="440">Ranked Flex Pick 5's</option>
     <option [value]="450">ARAM</option>
-    <option [value]="430">Unranked 5's</option>
+    <option [value]="400">Draft Pick, 5's</option>
+    <option [value]="430">Blind Pick, 5's</option>
+    <option [value]="960">The Teemoing</option>
+    <option [value]="950">The Teemoing - Level 100</option>
+
   </select>
 </form>
-<table class="table table-sm statikk-table table-hover" id="champions-table" *ngIf="staticChampions && championWinRates">
+<table class="table table-sm statikk-table table-hover" id="champions-table" *ngIf="staticChampions && championWinRates && version">
   <thead>
     <tr>
       <th class="table-sort-header" (click)="chooseSort('name')">Champion
@@ -30,7 +34,7 @@
     <tr class="champion-row" *ngFor="let champion of championWinRates | myChampionSort: sortColumn:reversed:staticChampions">
       <td>
         <a [routerLink]="champion.championId">
-          <img class="champion-tile-img" [src]="'http://ddragon.leagueoflegends.com/cdn/7.21.1/img/champion/' + staticChampions[champion.championId].image.full"
+          <img class="champion-tile-img" [src]="'http://ddragon.leagueoflegends.com/cdn/' + version + '/img/champion/' + staticChampions[champion.championId].image.full"
           />
           <span class="champion-name">
             {{staticChampions[champion.championId].name}}
