Making project better conform to Riot project standards

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -4,14 +4,13 @@
       Statikk
     </a>
 
-    <div class="my-2 my-lg-0">
-      <!-- <div class="collapse navbar-collapse " id="navbarNavAltMarkup"> -->
-      <div class="navbar-nav ">
-        <a class="nav-item nav-link" routerLink="/champions" routerLinkActive="active">
-          Champions
-        </a>
-      </div>
-      <!-- </div> -->
+    <div id="navbar-nav-wrapper">
+      <a class="nav-link" routerLink="/champions" routerLinkActive="active">
+        Champions
+      </a>
+      <a class="nav-link" routerLink="/about" routerLinkActive="active">
+        About
+      </a>
     </div>
   </div>
 </nav>
