Extending champion win rate endpoint filter criteria

--- a/web-app/src/app/features/champions/champions.component.scss
+++ b/web-app/src/app/features/champions/champions.component.scss
@@ -12,3 +12,20 @@ td {
   max-width: 600px;
   margin: 0 auto;
 }
+
+select {
+  width: 200px;
+}
+
+label {
+  margin-left: 10%;
+}
+
+.form-control {
+  width: 80%;
+  margin: auto;
+}
+
+#filter-form {
+  margin-bottom: 1em;
+}
