--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -1,19 +1,41 @@
 <div class="main-heading-wrapper">
   <h1>Champions</h1>
 </div>
-<form [formGroup]="filterCriteraFormGroup" novalidate>
-  <select class="form-control" formControlName="matchType" (change)="loadChampionWinRates()">
-    <option [value]="420">Ranked Solo 5's</option>
-    <option [value]="440">Ranked Flex Pick 5's</option>
-    <option [value]="450">ARAM</option>
-    <option [value]="400">Draft Pick, 5's</option>
-    <option [value]="430">Blind Pick, 5's</option>
-    <option [value]="960">The Teemoing</option>
-    <option [value]="950">The Teemoing - Level 100</option>
-
-  </select>
+<form id="filter-form" [formGroup]="filterCriteraFormGroup" novalidate class="row">
+  <div class="criteria-item col-md-3">
+    <label>Match Type</label>
+    <select class="form-control" formControlName="matchType" (change)="loadChampionWinRates()">
+      <option [value]="420">Ranked Solo 5's</option>
+      <option [value]="440">Ranked Flex Pick 5's</option>
+      <option [value]="450">ARAM</option>
+      <option [value]="400">Draft Pick, 5's</option>
+      <option [value]="430">Blind Pick, 5's</option>
+      <option [value]="960">The Teemoing</option>
+      <option [value]="950">The Teemoing - Level 100</option>
+    </select>
+  </div>
+  <div class="criteria-item col-md-3">
+    <label>Rank</label>
+    <select class="form-control" formControlName="rank" (change)="loadChampionWinRates()">
+      <option [value]="''">All</option>
+      <option *ngFor="let rank of ranks" [value]="rank.id">{{rank.name}}</option>
+    </select>
+  </div>
+  <div class="criteria-item col-md-3">
+    <label>Lane</label>
+    <select class="form-control" formControlName="lane" (change)="loadChampionWinRates()">
+      <option [value]="''">All</option>
+      <option *ngFor="let lane of lanes" [value]="lane.id">{{lane.name}}</option>
+    </select>
+  </div>
+  <div class="criteria-item col-md-3">
+    <label>Version</label>
+    <select class="form-control" formControlName="version" (change)="loadChampionWinRates()">
+      <option *ngFor="let version of versions" [value]="version">{{version}}</option>
+    </select>
+  </div>
 </form>
-<table class="table table-sm statikk-table table-hover" id="champions-table" *ngIf="staticChampions && championWinRates && version">
+<table class="table table-sm statikk-table table-hover" id="champions-table" *ngIf="staticChampions && championWinRates">
   <thead>
     <tr>
       <th class="table-sort-header" (click)="chooseSort('name')">Champion
@@ -34,7 +56,7 @@
     <tr class="champion-row" *ngFor="let champion of championWinRates | myChampionSort: sortColumn:reversed:staticChampions">
       <td>
         <a [routerLink]="champion.championId">
-          <img class="champion-tile-img" [src]="'http://ddragon.leagueoflegends.com/cdn/' + version + '/img/champion/' + staticChampions[champion.championId].image.full"
+          <img class="champion-tile-img" [src]="'http://ddragon.leagueoflegends.com/cdn/' + versions[0] + '.1/img/champion/' + staticChampions[champion.championId].image.full"
           />
           <span class="champion-name">
             {{staticChampions[champion.championId].name}}
