STAT-22: Adding the Team Builder feature (skeleton)

--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -8,6 +8,9 @@
       <a class="nav-link" routerLink="/champions" routerLinkActive="active">
         Champions
       </a>
+      <a class="nav-link" routerLink="/team-builder" routerLinkActive="active">
+        Team Builder
+      </a>
       <a class="nav-link" routerLink="/about" routerLinkActive="active">
         About
       </a>
