--- a/web-app/src/app/features/team-builder/team-builder.component.scss
+++ b/web-app/src/app/features/team-builder/team-builder.component.scss
@@ -36,12 +36,36 @@
     border-right: 15px solid $accent-color;    
 }
 
-#champion-selection-wrapper, #champion-suggestion-wrapper {
-    height: 50%;
+#champion-selection-body, #champion-suggestion-body {
     overflow-y: scroll;
 }
 
 .champion-selection-tile {
     height: 50px;
     margin: 2px;
+}
+
+.champion-set-wrapper, #champion-suggestion-body {
+    text-align: center;
+}
+
+
+#best-champ-suggestions ngb-rating {
+    background-color: rgba(10,255,10, 0.25);
+}
+
+#better-champ-suggestions ngb-rating {
+    background-color: rgba(80,175,10, 0.25);
+}
+
+#average-champ-suggestions ngb-rating {
+    background-color: rgba(125,125,10, 0.25);
+}
+
+#worse-champ-suggestions ngb-rating {
+    background-color: rgba(175,80,10, 0.25);
+}
+
+#worst-champ-suggestions ngb-rating {
+    background-color: rgba(255,10,10, 0.25);
 }
