Assigning Role to ChampSpec, adding new match types to UI

--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -12,6 +12,8 @@
       <option [value]="430">Blind Pick, 5's</option>
       <option [value]="960">The Teemoing</option>
       <option [value]="950">The Teemoing - Level 100</option>
+      <option [value]="1000">Project - Overdrive</option>
+      <option [value]="1010">Snow Battle - ARURF</option>
     </select>
   </div>
   <div class="criteria-item col-md-3">
