--- a/web-app/src/app/shared/components/champion-image/champion-image.component.html
+++ b/web-app/src/app/shared/components/champion-image/champion-image.component.html
@@ -1,1 +1,2 @@
 <img *ngIf="championId && staticChampions && version" [src]="'http://ddragon.leagueoflegends.com/cdn/' + version + '/img/champion/' + staticChampions[championId].image.full">
+<div *ngIf="!(championId && staticChampions && version)"></div>
