--- a/web-app/src/app/features/team-builder/team-builder.component.html
+++ b/web-app/src/app/features/team-builder/team-builder.component.html
@@ -1,17 +1,43 @@
-<div id="team-builder-wrapper">
+<ng-template #content let-c="close">
+  <div class="modal-body">
+    <form id="user-pick-modal-form" [formGroup]="userPickForm" (submit)="c(userPickForm.get('userSummonerName').value, userPickForm.get('userLane').value)">
+      <div class="input-group">
+        <label class="input-group-addon">Summoner Name:</label>
+        <input type="text" class="form-control" formControlName="userSummonerName">
+      </div>
+      <div class="input-group">
+        <label class="input-group-addon">Lane:</label>
+        <select class="form-control" formControlName="userLane">
+          <option selected>--Select a lane--</option>
+          <option *ngFor="let lane of laneList">
+            {{lane.name}}
+          </option>
+        </select>
+      </div>
+
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" [disabled]="!(userPickForm.get('userSummonerName').value && userPickForm.get('userLane').value)"
+      (click)="c(userPickForm.get('userSummonerName').value, userPickForm.get('userLane').value)">Go
+    </button>
+  </div>
+</ng-template>
+<div id="team-builder-wrapper" [hidden]="!staticChampionIds">
   <div id="team-builder-header">
     <h1>Team Builder</h1>
   </div>
-  <ng-template #tipContent>Which pick are you??</ng-template>
   <div id="team-builder-body" class="d-flex flex-row">
-    <div id="team-a-wrapper" class="team-wrapper p-1 d-flex flex-column justify-content-around" #t="ngbTooltip" triggers="manual"
-      placement="right" [ngbTooltip]="tipContent">
+    <div id="team-a-wrapper" class="team-wrapper p-1 d-flex flex-column justify-content-around">
       <div class="champion-pick-wrapper p-2" *ngFor="let championPickA of teamAChampions; let i=index">
-        <button class="btn btn-primary select-active-icon" *ngIf="!userPick" (click)="selectUserPick(championPickA)">
+        <button class="btn btn-primary select-active-icon active-element" *ngIf="!userPick" (click)="selectUserPick(championPickA, content)">
           <i class="fa fa-dot-circle-o"></i>
         </button>
+        <div id="user-indicator" *ngIf="championPickA == userPick">
+          <i class="fa fa-2x fa-user"></i>
+        </div>
         <div class="champion-img-wrapper p-2">
-          <app-champion-image [championId]="i+6"></app-champion-image>
+          <app-champion-image [championId]="championPickA.championId"></app-champion-image>
         </div>
         <div class="role-info-label p-2"> Mid</div>
       </div>
@@ -65,7 +91,7 @@
     <div id="team-b-wrapper" class="team-wrapper p-2 d-flex flex-column justify-content-around">
       <div class="champion-pick-wrapper p-2" *ngFor="let championPickB of teamAChampions; let i=index">
         <div class="champion-img-wrapper p-2">
-          <app-champion-image [championId]="i+1"></app-champion-image>
+          <app-champion-image [championId]="championPickB.championId"></app-champion-image>
         </div>
         <div class="role-info-label p-2"> Mid</div>
       </div>
